Update hero background image URL in walkathon.css

--- a/walkathon.css
+++ b/walkathon.css
@@ -13,7 +13,7 @@ background:linear-gradient(to bottom,#fff,#fff7fb);
 /* HERO */
 
 .hero{
-background:url('images/walkathon.png') center/cover no-repeat;
+background:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgJsWJBq2jrFpadpvYHECSynQpwtFm0gGfVw&s') center/cover no-repeat;
 height:95vh;
 }
 
